[package]
name = "apparatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.0"
glam = { version = "0.22.0", features = ["bytemuck"] }
encase = { version = "0.4.1", features = ["glam"] }
bytemuck = { version = "1.13.0", features = ["derive"] }
winit = "0.28.1"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
